<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.example.creatorsandinnovators.FirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment"
            app:enterAnim="@anim/nav_default_enter_anim" />
        <action
            android:id="@+id/action_FirstFragment_to_ThirdFragment"
            app:destination="@id/ThirdFragment"
            app:enterAnim="@anim/nav_default_enter_anim" />
    </fragment>
    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.example.creatorsandinnovators.SecondFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_second">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>
    <fragment
        android:id="@+id/ThirdFragment"
        android:name="com.example.creatorsandinnovators.ThirdFragment"
        android:label="@string/third_fragment_label"
        tools:layout="@layout/fragment_third">

        <action
            android:id="@+id/action_ThirdFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
        <action
            android:id="@+id/action_ThirdFragment_to_FourthFragment"
            app:destination="@id/FourthFragment" />
    </fragment>
    <fragment
        android:id="@+id/FourthFragment"
        android:name="com.example.creatorsandinnovators.FourthFragment"
        android:label="@string/fourth_fragment_label"
        tools:layout="@layout/fragment_fourth">
    </fragment>
</navigation>