<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <TextView
            android:id="@+id/textview_first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="72dp"
            android:layout_marginBottom="500dp"
            android:text="@string/welcome"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/button_first"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.281"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/button_first"
            android:layout_width="170dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="350dp"
            android:layout_marginEnd="4dp"
            android:text="@string/string1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.25"
            app:layout_constraintStart_toEndOf="@+id/button_second"
            app:layout_constraintTop_toBottomOf="@+id/textview_first" />

        <Button
            android:id="@+id/button_second"
            android:layout_width="170dp"
            android:layout_height="50dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="350dp"
            android:layout_marginEnd="10dp"
            android:text="@string/string2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button_first"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview_first"
            app:layout_constraintVertical_bias="0.847" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>